# projeto-final-computacao-grafica-doomlike

./: CHECKLIST-JOGO-FINAL.md  CMakeLists.txt  README.md
include/audio/: audio_system.h  audio_tuning.h
include/core/: config.h  entities.h  game_state.h
include/graphics/: drawlevel.h  hud.h
include/level/: level.h
include/utils/: assets.h
maps/: level1.txt  level2.txt  level3.txt
shaders/: battery_flash.frag  battery_flash.vert
src/audio/: audio_system.cpp
src/core/: avatarEnemy.cpp  entities.cpp  game.cpp  light_system.cpp
src/graphics/: drawlevel.cpp  hud.cpp
src/level/: level.cpp  level_validation.cpp
src/tools/: level_validator_main.cpp
src/utils/: assets.cpp
